[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1.0.98"
security-framework = "3.3.0"
base64 = "0.22.1"
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tracing-test = "0.2.5"
