[package]
name = "vt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vt"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1.0.98"
base64 = "0.22.1"
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.128"
totp-rs = "5.7.0"
rpassword = "7.4.0"
regex = "1.11.1"
exec = "0.3.1"
libc = "0.2.174"
hostname = "0.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.3.0"
localauthentication-rs = "0.1.0"

[dev-dependencies]
tracing-test = "0.2.5"
